[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ez-vdl"
version = "0.1.2"
description = "A tool to download video s from X by supplying the URL of the post containing the video."
authors = [{ name = "Ricardo Mendes", email = "ricardo.mendes@streambit.dev" }]
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "yt-dlp>=2025.9.5",
]
license = { text = "MIT" }
keywords = ["x", "twitter", "video", "downloader", "yt-dlp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/rikkarth/ez-vdl"
Repository = "https://github.com/rikkarth/ez-vdl"
Issues = "https://github.com/rikkarth/ez-vdl/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.13"
files = ["src/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pyinstaller>=6.15.0",
    "ruff>=0.12.12",
    "types-yt-dlp>=2025.9.5.20250907",
]
